# romio

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.claude/: launch.json  settings.local.json
.claude/agents/: scan-integrity-reviewer.md  test-writer.md
docs/architecture/: overview.md
docs/contributing/: bios-database.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: bios_rules.json  emulator_matrix.json  format_matrix.json  save_paths.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: batocera.rs  esde.rs  launchbox.rs  mod.rs  playnite.rs  retrobat.rs
src-tauri/src/commands/: bios.rs  emulator.rs  export.rs  format.rs  host_env.rs  installed.rs  mod.rs  multidisc.rs  project.rs  rollback.rs  save.rs  scan.rs  scummvm.rs
src-tauri/src/db/: artifacts.rs  bios.rs  checkpoints.rs  emulator.rs  format.rs  mod.rs  operation_log.rs  projects.rs  save.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_scan_stats.sql  003_bios.sql  004_save_indexes.sql
src-tauri/src/engine/: bios_sweep.rs  bios_validator.rs  format_matrix.rs  hash.rs  host_checker.rs  mod.rs  path_normalizer.rs  save_checkpoint.rs  save_registry.rs  scanner.rs  shortcut_validator.rs
src-tauri/src/models/: artifact.rs  bios.rs  emulator.rs  format.rs  host.rs  mod.rs  project.rs  save.rs  validation.rs
src/lib/: ipc.mock.ts  (+8 more)
tests/: smoke.spec.ts
(+34 files in other folders)
