[package]
name = "romio"
version = "0.1.0"
description = "Your retro library's best friend."
authors = ["Romio Contributors"]
license = "GPL-3.0"
repository = "https://github.com/your-org/romio"
edition = "2021"
rust-version = "1.75"

[lib]
name = "romio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "romio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri               = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
tauri-plugin-shell  = "2"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Filesystem traversal
walkdir = "2"

# Hashing - MD5 for BIOS validation, Blake3 for fast file identity
md5    = "0.7"
blake3 = "1"

# Parallel iteration (hash scanning large libraries)
rayon = "1"

# Database - SQLite for project state
rusqlite = { version = "0.31", features = ["bundled"] }

# Error handling
anyhow    = "1"
thiserror = "1"

# Logging
log        = "0.4"
env_logger = "0.11"

# Path handling - resolves UNC paths on Windows to sane paths
dunce = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for artifact IDs
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile  = "3"
assert_fs = "1"
